--- a/package.json
+++ b/package.json
@@ -6,18 +6,42 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "ts-node script/importSanityData.mjs"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@next/font": "^14.2.15",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@sanity/client": "^6.24.3",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.68.3",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "lucide-react": "^0.469.0",
     "next": "14.2.16",
+    "next-sanity": "^9.8.32",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
+    "react-slick": "^0.30.3",
+    "sanity": "^3.68.3",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.14",
+    "swiper": "^11.2.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
