--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "import-data": "ts-node script/importSanityData.mjs"
   },
   "dependencies": {
+    "@clerk/elements": "^0.22.16",
+    "@clerk/nextjs": "^6.10.3",
     "@hookform/resolvers": "^3.9.1",
     "@next/font": "^14.2.15",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -19,19 +21,23 @@
     "@sanity/client": "^6.24.3",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.3",
+    "@stripe/stripe-js": "^5.6.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.0.6",
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
     "next-sanity": "^9.8.32",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-share": "^5.1.2",
     "react-slick": "^0.30.3",
     "sanity": "^3.68.3",
     "slick-carousel": "^1.8.1",
+    "stripe": "^17.6.0",
     "styled-components": "^6.1.14",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0",
@@ -40,7 +46,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
